Ultimated homepage, added #about_section to main.css and fixed some spacing issues.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,10 @@ body
     text-align: center;
 }
 
+#about_section{
+    padding-left: 0px;
+}
+
 
 
 
